--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,9 +47,6 @@ body {
 }
 
 svg {
-  position: relative;
-  top: 10px;
-
   border: 1px solid black;
 }
 
@@ -74,7 +71,6 @@ svg {
 
 #log svg {
   float: left;
-  top: 0px;
 }
 
 svg ~ p {
@@ -95,6 +91,11 @@ svg ~ p {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+textarea {
+  font-family: serif;
+  resize: none;
 }
 
 #input {
