--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,6 +72,23 @@
   grid-template-rows: 85% 15%;
 }
 
+.newbutton {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: 20%;
+  width: 32px;
+  height: 32px;
+  font-weight: bold;
+}
+
+.newdiv {
+  position: absolute;
+  z-index: 2;
+  top: 32px;
+  right: 20%;
+}
+
 svg {
   border: 1px solid black;
 }
@@ -99,8 +116,13 @@ svg {
   border-bottom: 1px solid black;
 }
 
-.activechannel h2 {
+.activechannel .channelname {
   border-bottom: 5px solid blue;
+}
+
+.leavebutton {
+  width: 32px;
+  height: 32px;
 }
 
 .chatlog {
@@ -138,6 +160,10 @@ svg ~ p {
   padding-left: 10px;
 }
 
+div:empty + #who {
+  border-left: 1px solid black;
+}
+
 #who ul {
   list-style: none;
   padding: 0;
@@ -168,7 +194,7 @@ textarea {
 
 <script>
 function calculate() {
-  document.getElementById("calculate").style.display = "";
+  app.idkey_state = "show";
 
   app.self_user.nickname = app.self_user.id_salt;
 
@@ -178,12 +204,13 @@ function calculate() {
   app.self_user.idkey = keypair.publicKey;
 
   update_icons();
-  app.$refs.nickname.focus();
+  Vue.nextTick(function () {
+    app.$refs.nickname.focus();
+  });
 }
 
 function connect() {
   app.state="chat";
-  document.getElementById("chat").style.display = "";
 
   // app.websocket = new WebSocket("ws://" + window.location.host + ":8192" + window.location.pathname.substring(0, window.location.pathname.lastIndexOf("/")) + "/chatsock");
   // app.websocket = new WebSocket("ws://" + window.location.host + ":8192" + "/chatsock");
@@ -255,7 +282,9 @@ function scrolldown() {
 }
 
 function inputfocus() {
-  document.getElementById("input_text").focus();
+  Vue.nextTick(function () {
+    document.getElementById("input_text").focus();
+  });
 }
 </script>
 </head>
@@ -263,7 +292,7 @@ function inputfocus() {
 <body>
 
 <div id="app">
-<div class="login" v-bind:class="state==='login' ? visible : invisible">
+<div class="login" v-bind:style="{display: state==='login' ? '' : 'none'}">
   <div class="unamepword">
     <h1>Hermod chat</h1>
     Username: <input ref="id_salt" v-model="self_user.id_salt" @keyup.enter="$refs.password.focus()"> <br/>
@@ -271,7 +300,7 @@ function inputfocus() {
     Your password would take {{crack_time}} to crack. <br/>
     <button ref="calculatebutton" onclick="calculate()">Calculate your IDKey</button>
   </div>
-  <div id="calculate" style="display: none">
+  <div id="calculate" v-bind:style="{display: idkey_state==='show' ? '' : 'none'}">
     <hr/>
     Nickname: <input ref="nickname" v-model="self_user.nickname" @keyup.enter="$refs.connectbutton.click()"> <br/>
     IDKey:
@@ -281,13 +310,18 @@ function inputfocus() {
   </div>
 </div>
 
-<div id="chat" style="display: none">
+<div id="chat" v-bind:style="{display: state==='chat' ? '' : 'none'}">
+  <button class="newbutton">&#x1f4dd;</button>
+  <div class="newdiv" v-bind:style="{display: newdiv_state==='show' ? '' : 'none'}"><input placeholder="New channel name"></input></div>
   <div id="logs">
     <div class="channel" v-for="(chatlog,ix) in chatlogs" v-on:click="changechannel(ix)" v-bind:class="{activechannel: focuschannel===channelnames[ix]}">
-      <div v-if="channelnames[ix]===''" data-tooltip="CC 3.0 BY - Icon by Freepik https://www.flaticon.com/authors/freepik">
-        <object data="home.svg" width=32 height=32></object>
+      <div class="channelname">
+        <button class="leavebutton" v-on:click="leave(channelnames[ix])">&#x274c;</button>
+        <div style="width: min-content;" v-if="channelnames[ix]===''" data-tooltip="CC 3.0 BY - Icon by Freepik https://www.flaticon.com/authors/freepik">
+          <object data="home.svg" width=32 height=32></object>
+        </div>
+        {{channelnames[ix]}}
       </div>
-      <h2 class="channelname">{{channelnames[ix]}}</h2>
       <div class="chatlog">
         <div class="msg" v-for="item in chatlog">
           <svg width="32" height="32" v-bind:data-jdenticon-value="item.idkey"></svg>
@@ -321,6 +355,8 @@ function inputfocus() {
     el: '#app',
     data: {
       state: "login",
+      idkey_state: "hide",
+      newdiv_state: "hide",
       websocket: null,
       self_user: {
         id_salt: "",
@@ -343,6 +379,9 @@ function inputfocus() {
       changechannel: function (ix) {
         this.focuschannel = this.channelnames[ix];
         inputfocus();
+      },
+      leave: function (channel) {
+        leave_channel(channel);
       },
     },
     mounted: function () {
