--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,6 +18,8 @@
   </script>
   <script src="sodium.js"></script>
   <script src="zxcvbn.js"></script>
+  <script src="moment.js"></script>
+  <script src="moment-timezone-with-data.js"></script>
 
 <style>
 [data-tooltip] {
@@ -41,7 +43,6 @@
 }
 
 .visible {
-  display: '';
 }
 
 .invisible {
@@ -156,12 +157,23 @@ svg {
   float: left;
 }
 
-svg ~ p {
+.msgitem {
   margin-left: 42px;
+  margin-block-end: 0;
 }
 
-.msg p {
-  margin-block-end: 0;
+.msgtext {
+  word-break: break-word;
+}
+
+.timestamp {
+  font-style: italic;
+  font-size: small;
+  color: grey;
+  float: right;
+  border-left: 1px solid grey;
+  border-bottom: 1px solid grey;
+  padding-left: 3px;
 }
 
 #who {
@@ -203,6 +215,12 @@ textarea {
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.sockmsg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 </style>
 
 <script>
@@ -223,30 +241,64 @@ function calculate() {
 }
 
 function connect() {
-  app.state="chat";
-
   // app.websocket = new WebSocket("ws://" + window.location.host + ":8192" + window.location.pathname.substring(0, window.location.pathname.lastIndexOf("/")) + "/chatsock");
   // app.websocket = new WebSocket("ws://" + window.location.host + ":8192" + "/chatsock");
-  app.websocket = new WebSocket("ws://ada.cs.pdx.edu:8192/chatsock")
-  // TODO: handle connection failure
-  // TODO: handle slow connection
-  // TODO: don't enable input box until connected?
-  // TODO: don't erase input box until message sent?
+  app.sockmsg = "Connecting...";
 
-  app.websocket.onmessage = function(e) {
+  app.websocket = new WebSocket("ws://ada.cs.pdx.edu:8192/")
+
+  app.websocket.onmessage = function (e) {
     var receive = JSON.parse(e.data);
+
+    if (! ("idkey" in receive)) {return;}
     var temp = atob(receive.idkey);
     var decidkey = new Uint8Array(temp.length);
     for (i=0; i<temp.length; i+=1) {decidkey[i] = temp.charCodeAt(i);}
 
-    item = {idkey:decidkey, nickname:receive.nickname, message:receive.message};
-    post_message(receive.channel, item)
-    update_icons();
-    scrolldown();
+    if (! ("payload" in receive)) {return;}
+    //TODO verify signature
+    var payload = JSON.parse(receive.payload);
+
+    if (! ("timestamp" in payload)) {return;}
+    //TODO verify timestamp
+
+    if (! (decidkey in app.users)) {
+      app.users[decidkey] = {nickname: ""};
+    }
+
+    app.users[decidkey].lastseen = moment();
+    app.users[decidkey].lastcalled = moment();
+
+    if ("nickname" in payload) {
+      app.users[decidkey].nickname = payload.nickname;
+    }
+
+    if ("send" in payload) {
+      for (var channel in payload.send) {
+        item = {idkey: decidkey,
+                nickname: app.users[decidkey].nickname,
+                message: payload.send[channel],
+                timestamp: payload.timestamp};
+        post_message(channel, item)
+      }
+    }
   }
 
-  window.onbeforeunload = function() {return true;};
-  inputfocus();
+  app.websocket.onopen = function (e) {
+    var encidkey = btoa(String.fromCharCode(...app.self_user.idkey));
+    var obj = {idkey:encidkey, nickname:app.self_user.nickname, join:[""]};
+    // app.websocket.send(JSON.stringify(obj));
+
+    app.sockmsg = "Connected";
+    app.state="chat";
+
+    window.onbeforeunload = function() {return true;};
+    app.join("");
+  }
+
+  app.websocket.onclose = function (e) {
+    app.sockmsg = "Not Connected";
+  }
 }
 
 function join_channel(channel) {
@@ -263,6 +315,7 @@ function join_channel(channel) {
   }
 
   app.focuschannel = channel;
+  inputfocus();
 }
 
 function leave_channel(channel) {
@@ -274,11 +327,17 @@ function leave_channel(channel) {
   if (app.focuschannel === channel) {
     app.focuschannel = app.channelnames[0];
   }
+  inputfocus();
 }
 
 function post_message(channel, item) {
   ix = app.channelnames.indexOf(channel);
-  if (ix != -1) {app.chatlogs[ix].push(item);}
+  if (ix != -1) {
+    app.chatlogs[ix].push(item);
+
+    update_icons();
+    scrolldown();
+  }
 }
 
 function update_icons() {
@@ -313,15 +372,17 @@ function inputfocus() {
     Username: <input ref="id_salt" v-model="self_user.id_salt" @keyup.enter="$refs.password.focus()"> <br/>
     Password: <input ref="password" v-model="self_user.password" @keyup.enter="$refs.calculatebutton.click()"> <br/>
     Your password would take {{crack_time}} to crack. <br/>
+    <br/>
     <button ref="calculatebutton" onclick="calculate()">Calculate your IDKey</button>
   </div>
   <div id="calculate" v-bind:style="{display: idkey_state==='show' ? '' : 'none'}">
-    <hr/>
     Nickname: <input ref="nickname" v-model="self_user.nickname" @keyup.enter="$refs.connectbutton.click()"> <br/>
     IDKey:
     <svg width="128" height="128" v-bind:data-jdenticon-value="self_user.idkey"></svg> <br/>
     <br/>
     <button ref="connectbutton" onclick="connect()">Connect with this nickname and IDKey</button>
+    <br/>
+    {{sockmsg}}
   </div>
 </div>
 
@@ -341,9 +402,12 @@ function inputfocus() {
       <div class="chatlog">
         <div class="msg" v-for="item in chatlog">
           <svg width="32" height="32" v-bind:data-jdenticon-value="item.idkey"></svg>
-          <p>
-            <strong>{{item.nickname}}:</strong>
-            {{item.message}}
+          <span class="timestamp">{{item.timestamp |fromNow}}</span>
+          <p class="msgitem">
+            <span class="msgtext">
+              <strong>{{item.nickname}}:</strong>
+              {{item.message}}
+            </span>
           </p>
         </div>
       </div>
@@ -352,8 +416,8 @@ function inputfocus() {
   <div id="who">
     <h3>Users here:</h3>
     <ul>
-      <li v-for="item in users">
-        <svg width="32" height="32" v-bind:data-jdenticon-value="item.idkey"></svg>
+      <li v-for="(item,idkey) in users">
+        <svg width="32" height="32" v-bind:data-jdenticon-value="idkey"></svg>
         <strong>{{item.nickname}}</strong>
       </li>
     </ul>
@@ -361,7 +425,10 @@ function inputfocus() {
   <div id="input">
     <svg width="64" height="64" v-bind:data-jdenticon-value="self_user.idkey"></svg>
     <strong>{{self_user.nickname}}:</strong>
-    <textarea id="input_text" ref="input_text" v-model="input" @keyup.enter="send"></textarea>
+    <textarea id="input_text" ref="input_text" v-model="input" @keydown.enter="send"></textarea>
+  </div>
+  <div class="sockmsg">
+    {{sockmsg}}
   </div>
 </div>
 </div>
@@ -370,7 +437,9 @@ function inputfocus() {
   var app = new Vue({
     el: '#app',
     data: {
+      interval: null,
       state: "login",
+      sockmsg: "",
       idkey_state: "hide",
       newdiv_state: "hide",
       websocket: null,
@@ -381,15 +450,24 @@ function inputfocus() {
         idkey: "",
         nickname: "",
       },
-      users: [],
+      users: {},
+      channelusers: {},
       channelnames: [""],
       focuschannel: "",
       chatlogs: [[]],
       newchannelname: "",
       input: "",
-      send: function () {
+      send: function (e) {
+        e.preventDefault();
+        if (this.input === "") {return;}
+
+        // TODO: don't erase input box until message sent?
         var encidkey = btoa(String.fromCharCode(...this.self_user.idkey));
-        var obj = {idkey:encidkey, nickname:this.self_user.nickname, channel:this.focuschannel, message:this.input};
+        var sendobj = {} ; sendobj[this.focuschannel] = this.input;
+        var payloadobj = {timestamp:moment().utc().format(),
+                          nickname:this.self_user.nickname,
+                          send:sendobj};
+        var obj = {idkey:encidkey, payload:JSON.stringify(payloadobj)};
         this.websocket.send(JSON.stringify(obj));
         this.input = "";
       },
@@ -413,12 +491,23 @@ function inputfocus() {
         this.newdiv_state = "hide";
       },
     },
+    created: function () {
+      this.interval = setInterval(() => this.$forceUpdate(), 60000);
+    },
     mounted: function () {
       this.$refs.id_salt.focus();
+    },
+    beforeDestroy() {
+      clearInterval(this.interval);
     },
     computed: {
       crack_time: function() {
         return zxcvbn(this.self_user.password).crack_times_display.offline_slow_hashing_1e4_per_second;
+      },
+    },
+    filters: {
+      fromNow(date) {
+        return moment(date).fromNow();
       },
     },
   });
